--- a/sections/多元统计分析.tex
+++ b/sections/多元统计分析.tex
@@ -740,7 +740,7 @@
     % \end{itemize}
     
         
-\subsubsection{Sampling distribution of $ \bar{X} $ and $ S $}
+\subsubsection{Sampling distribution of $ \bar{X} $ and $ S $}\label{SubSubSectionMultivariateNormalSamplingDistribution}
         $ \hat{\mu}=\bar{X} $ and $ \hat{\Sigma}=\dfrac{n-1}{n}S $ are statistics, with sampling distribution.
 
 
@@ -1097,9 +1097,9 @@
     PCA and next subsection \hyperlink{SubSectionFA}{FA} focus on data dimension reduction. Why?
 
 \begin{point}
-    `Curse of Dimensionality'\index{Curse of Dimensionality}
+    `Curse of Dimensionality'
 \end{point}
-
+\index{Curse of Dimensionality}
     \begin{itemize}[topsep=2pt,itemsep=2pt]
         \item Difficulty in computation complexity: Many algorithms has complexity $ O(n^2) $ or more, high dimension $ n $ cause high complexity.
         \item Hughes Phenomenon: As the number of feature dimension increases, the classifier's performance increases as well until an optimal dimension. Adding more features based on the same size as the training set will then degrade the classifier's performance. 
