--- a/sections/应用随机过程.tex
+++ b/sections/应用随机过程.tex
@@ -790,7 +790,7 @@ Properties:
         \end{itemize}
 \end{itemize}
 
-\subsubsection{Poisson Process}
+\subsubsection{Poisson Process}\label{SubSubSectionPoissonProcess}
 \index{Poisson Process}\hypertarget{PoissonProcess}{}
 
 Motivation: The accumulate events happens at random, with `happening rate' of events as $ \lambda  $
