--- a/sections/生物统计学概论.tex
+++ b/sections/生物统计学概论.tex
@@ -22,7 +22,7 @@ To compare groups, e.g. to determine whether there is significant difference bet
 % \index{Factor Model!Single Factor Model}
 
 \begin{point}
-    Cell Mean Model
+    Cell Means Model\index{Cell Means Model}
 \end{point}
 
 \[
@@ -48,7 +48,7 @@ Key of ANOVA: Decomposition of variation SS:
 \end{align}
 
 \begin{point}
-    Factor Model
+    Effect Model\index{Effect Model}
 \end{point}
 
     
