--- a/sections/统计学习导论.tex
+++ b/sections/统计学习导论.tex
@@ -637,9 +637,9 @@ Eigenvalue $ \gamma _i $ and eigen function $ \phi _i(x) $ of Kernel:
     which is Mercer's Thm.:\index{Mercer's Theorem} Semi-positive definite symmetric kernel could be expressed as an inner product form. Such a form is also called the kernel trick\index{Kernel Trick} because it usually avoid calculating inner product in high dimensional space.
     
 \begin{point}
-    Reproducing Kernel Hilbert Space (RKHS)\index{RKHS (Reproducing Kernel Hilbert Space)}
+    Reproducing Kernel Hilbert Space (RKHS)
 \end{point}
-
+\index{RKHS (Reproducing Kernel Hilbert Space)}
     Now use set $ \{\phi _i\} $ as the orthonormal base to form a Hilbert space $ \mathcal{H}_K=\mathrm{span}\{\phi _i\}  $ i.e. any function $ f\in\mathcal{H}_K $ could be expressed as expansion
     \begin{align}
         \mu (x)=\sum_{i} \mu _i\phi _i(x)
