--- a/sections/统计推断.tex
+++ b/sections/统计推断.tex
@@ -352,7 +352,7 @@ Def. $\mathscr{F}_\Theta=\{f(x;\vec{\theta}|\vec{\theta}\in\Theta)\}$ is \textbf
         \end{equation}
         \item (Weak) Consistency
         \begin{equation}
-            \lim_{n\to\infty}\mathbb{P}(|\hat{\theta }_n(\vec{X})-\theta (\theta)|\geq \varepsilon)=0\quad\forall\varepsilon>0    
+            \lim_{n\to\infty}\mathbb{P}(|\hat{\theta }_n(\vec{X})-\theta|\geq \varepsilon)=0\quad\forall\varepsilon>0    
         \end{equation}
         \item Asymptotic Normality
         \begin{align}
