--- a/summary.tex
+++ b/summary.tex
@@ -266,7 +266,14 @@
 
 \include{sections/应用随机过程}
 \newpage
+\thispagestyle{SectionPage}
 
+\include{sections/贝叶斯统计导论}
+\newpage
+\thispagestyle{SectionPage}
+
+\include{sections/实验设计与分析}
+\newpage
 
 
 \pagestyle{postContent}
